--- a/01 - Introdução/index.html
+++ b/01 - Introdução/index.html
@@ -33,15 +33,17 @@
   </div>
 
   <div id="footer">
-    <a href="#">Instagram</a>
-    <a href="mailto:contat@kfkajsd@gmail.com">Fale conosco</a>
+
+    <div id="line"></div>
+
+    <a target="_blank" href="#">Instagram</a>
+    <a target="_blank" href="mailto:contat@kfkajsd@gmail.com">Fale conosco</a>
   </div>
 
   <img 
-    id="bolls"
+    id="balls"
     src="assets/balls-decoration.svg" 
     alt="bolls"
   >
-  
 </body>
 </html>
