--- a/treineme/index.html
+++ b/treineme/index.html
@@ -2,9 +2,12 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Treine me</title>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;1,700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 </head>
@@ -26,7 +29,8 @@
   
     <main>
       <section class="text">
-        <h1>Treinos exclusivos para você</h1>
+        <h1>Treinos <span>exclusivos</span> 
+          para você</h1>
 
         <p>
           Nós criamos treinos <strong>exclusivos e únicos para você.</strong> <br/>
@@ -51,6 +55,5 @@
     src="assets/balls-decoration.svg" 
     alt="bolinhos verdes no canto inferior direitor da página"
   >
-  
 </body>
 </html>
