--- a/treineme/index.html
+++ b/treineme/index.html
@@ -23,7 +23,7 @@
 
           <li> <a href="#">Home</a></li>          
           <li> <a href="#">Sobre</a></li>
-          <li><a href="#">Trienar</a></li>
+          <li><a href="#">Treinar</a></li>
         </ul>
       </nav>
   
@@ -52,6 +52,7 @@
   </div>
 
   <img 
+    id="balls"
     src="assets/balls-decoration.svg" 
     alt="bolinhos verdes no canto inferior direitor da página"
   >
