--- a/Projeto 03/index.html
+++ b/Projeto 03/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@600;700&family=Poppins&display=swap" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  
+  <title>Crie seu evento</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <label for="titulo">Titulo do evento</label>
-  <input type="text" name="titulo" id="titulo">
-  
+  <header>
+    <h1>Crie e compartilhe seu evento.</h1>
+    <p>
+      O primeiro passo, é preencher esse
+      formulário de inscrição.
+    </p>
+  </header>
+
+  <form action="">
+    estrutura
+  </form>
+
 </body>
 </html>
