--- a/Projeto 03/index.html
+++ b/Projeto 03/index.html
@@ -12,17 +12,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Crie e compartilhe seu evento.</h1>
-    <p>
-      O primeiro passo, é preencher esse
-      formulário de inscrição.
-    </p>
-  </header>
 
-  <form action="">
-    estrutura
-  </form>
-
+  <div class="page">
+    <header>
+      <h1>Crie e compartilhe seu evento.</h1>
+      <p>
+        O primeiro passo, é preencher esse
+        formulário de inscrição.
+      </p>
+    </header>
+  
+    <form action="">
+      
+    </form>
+  </div>
 </body>
 </html>
