--- a/Projeto 03/index.html
+++ b/Projeto 03/index.html
@@ -1,30 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@600;700&family=Poppins&display=swap" rel="stylesheet">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crie seu evento</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:wght@600;700&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Crie seu evento</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="page">
+      <header>
+        <h1>Crie e compartilhe seu evento.</h1>
+        <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
+      </header>
 
-  <div class="page">
-    <header>
-      <h1>Crie e compartilhe seu evento.</h1>
-      <p>
-        O primeiro passo, é preencher esse
-        formulário de inscrição.
-      </p>
-    </header>
-  
-    <form action="">
-      
-    </form>
-  </div>
-</body>
+      <form action="">
+        <fieldset>
+          <div class="fiedset wrapper">
+            <legend>Informações do evento</legend>
+
+            <div class="input-wrapper">
+              <label for="event-title"> Título do evento <span>(mínimo 8 caracteres)</span></label>
+              <input type="text" id="event-title" />
+            </div>
+
+            <div class="input-wrapper">
+              <label for="event-link">Link do evento <span>(comece com https://)</span></label>
+              <input type="url" id="event-link" />
+            </div>
+
+            <div class="input-wrapper">
+              <label for="event-whatsapp">Whatsapp para contato <span>(somente números)</span></label>
+              <input type="number" id="event-whatsapp" />
+            </div>
+
+            <div class="input-wrapper">
+              <label for="event-link">Informações  extras</label>
+              <textarea name="" id="event-info"></textarea>
+            </div>
+
+            <div class="input-wrapper">
+              <label for="event-category">Categoria</label>
+              <select id="event-category">
+                <option value="live">Ao vivo</option>
+                <option value="podcast">Podcast</option>
+                <option value="mentorship">Mentoria</option>
+              </select>
+            </div>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+  </body>
 </html>
