create button form

--- a/Projeto 03/index.html
+++ b/Projeto 03/index.html
@@ -102,7 +102,11 @@
             </div>
           </div>
         </fieldset>
+
       </form>
+      <footer class="form-buttons">
+        <input class="button" type="submit" value="Salvar evento">
+      </footer>
     </div>
   </body>
 </html>
