--- a/Projeto 03/index.html
+++ b/Projeto 03/index.html
@@ -21,14 +21,19 @@
         <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
       </header>
 
-      <form action="">
+      <form action="" id="my-form">
         <fieldset>
-          <div class="fiedset wrapper">
+          <div class="fiedset-wrapper">
             <legend>Informações do evento</legend>
 
             <div class="input-wrapper">
               <label for="event-title"> Título do evento <span>(mínimo 8 caracteres)</span></label>
-              <input type="text" id="event-title" />
+              <input 
+                required
+                type="text" 
+                id="event-title" 
+                minlength="8"
+              />
             </div>
 
             <div class="input-wrapper">
@@ -68,9 +73,12 @@
 
             <div class="input-wrapper">
               <label for="event-password">Senha de acesso para os participantes<span>((mínimo 8 caracteres))</span></label>
-              <input type="password" id="event-password" />
+              <input 
+                type="password" 
+                id="event-password" 
+                minlength="4"
+              />
             </div>
-
 
             <div class="checkbox-wrapper">
               <input type="checkbox" id="event-private" />
@@ -105,7 +113,14 @@
 
       </form>
       <footer class="form-buttons">
-        <input class="button" type="submit" value="Salvar evento">
+        <button 
+          class="button" 
+          type="submit" 
+          form="my-form"
+          value="Salvar evento"
+        >
+        Salvar evento
+      </button>
       </footer>
     </div>
   </body>
