--- a/Projeto 04/index.html
+++ b/Projeto 04/index.html
@@ -14,22 +14,27 @@
 </head>
 <body>
   <main>
-    <p>Nosso Trabalho</p>
 
-    <h1>
-      Fazemos projetos para 
-      mobile e Web
-    </h1>
+    <div>
+      <p>Nosso Trabalho</p>
 
-    <p>Se você tem uma grande ideia inovadora e que vai transformar vidas, coloque em prática agora com a gente.</p>
+      <h1>
+        Fazemos projetos para 
+        mobile e Web
+      </h1>
+  
+      <p>Se você tem uma grande ideia inovadora e que vai transformar vidas, coloque em prática agora com a gente.</p>
+  
+      <a href="#">Saiba Mais</a>
+    </div>
 
-    <a href="#">Saiba Mais</a>
-
-    <ul>
-      <li><span>1</span>Experiência do usuário</li>
-      <li><span>2</span>Pagamentos no aplicativo</li>
-      <li><span>3</span>Suporte 24h todos os dias</li>
-    </ul>
+    <div>
+      <ul>
+        <li><span>1</span>Experiência do usuário</li>
+        <li><span>2</span>Pagamentos no aplicativo</li>
+        <li><span>3</span>Suporte 24h todos os dias</li>
+      </ul>
+    </div>
   </main>
   
 </body>
