--- a/Desafios/04/index.html
+++ b/Desafios/04/index.html
@@ -16,9 +16,11 @@
 
   <div class="page">
     <header>
-      <img src="assets/logo 1.svg" alt="sorverte em volta de um circulo">
+      <div class="logo">
+        <img src="assets/logo 1.svg" alt="sorverte em volta de um circulo">
   
-      <h1>Space Cream</h1>
+        <h1>Space Cream</h1>
+      </div>
     </header>
   
     <main>
