mobile first challenge 04

--- a/Desafios/04/index.html
+++ b/Desafios/04/index.html
@@ -14,23 +14,58 @@
 </head>
 <body>
 
+  <header>
+    <div class="logo">
+      <img src="assets/logo 1.svg" alt="sorverte em volta de um circulo">
+
+      <h1>Space Cream</h1>
+    </div>
+  </header>
   <div class="page">
-    <header>
-      <div class="logo">
-        <img src="assets/logo 1.svg" alt="sorverte em volta de um circulo">
-  
-        <h1>Space Cream</h1>
-      </div>
-    </header>
   
     <main>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, distinctio amet perspiciatis hic quas beatae. Quos est autem totam tempora. Doloremque error amet sit iusto alias repellat veritatis. Vitae, vero?
       </p>
-  
-      <div class="card">
-        <img src="" alt="">
-        <span>Paleta</span>
+
+      <div class="cards">
+        <div class="card">
+          <img 
+            src="https://images.unsplash.com/photo-1497034825429-c343d7c6a68f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aWNlJTIwY3JlYW18ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60" 
+            alt="Sorvete"
+          >
+         <div>
+          <h3>Paleta</h3>
+         </div>
+        </div>
+        <div class="card">
+          <img 
+            src="https://images.unsplash.com/photo-1560008581-09826d1de69e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=888&q=80" 
+            alt="Baunilha"
+          >
+         <div>
+          <h3>Baunilha</h3>
+         </div>
+        </div>    
+        <div class="card">
+          <img 
+            src="https://images.unsplash.com/photo-1477505982272-ead89926a577?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=400&q=60" 
+            alt="Casquinha"
+          >
+         <div>
+          <h3>Casquinha</h3>
+         </div>
+        </div>    
+        <div class="card">
+          <img 
+            src="https://images.unsplash.com/photo-1562440499-64c9a111f713?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80" 
+            alt="Bolo"
+          >
+         <div>
+          <h3>Bolo</h3>
+         </div>
+        </div>
+
       </div>
     </main>
   </div>
