--- a/Desafios/04/index.html
+++ b/Desafios/04/index.html
@@ -18,16 +18,18 @@
     <div class="logo">
       <img src="assets/logo 1.svg" alt="sorverte em volta de um circulo">
 
-      <h1>Space Cream</h1>
+     <div class="wrapper-h1">
+       <h1>Space Cream</h1>
+     </div>
     </div>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, distinctio amet perspiciatis hic quas beatae. Quos est autem totam tempora. Doloremque error amet sit iusto alias repellat veritatis. Vitae, vero?
+    </p>
   </header>
   <div class="page">
   
     <main>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, distinctio amet perspiciatis hic quas beatae. Quos est autem totam tempora. Doloremque error amet sit iusto alias repellat veritatis. Vitae, vero?
-      </p>
-
       <div class="cards">
         <div class="card">
           <img 
