--- a/Stage 04 DOM/Jogo-adivinhacao/index.html
+++ b/Stage 04 DOM/Jogo-adivinhacao/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
-  
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jogo adivinhação</title>
@@ -16,13 +16,20 @@
 <body>
 
   <main>
-    <h1>Jogo da Adivinhação</h1>
-    <p>Adivinhe um número entre 0 e 10</p>
+    <div class="screen1 hide">
+      <h1>Jogo da Adivinhação</h1>
+      <p>Adivinhe um número entre 0 e 10</p>
+      
+      <form action="">
+        <input type="number">
+        <button>Tentar</button>
+      </form>
+    </div>
 
-    <form action="">
-      <input type="text">
-      <button>Tentar</button>
-    </form>
+    <div class="screen2">
+      <h2>Acertou em 3 vezes</h2>
+      <button>Jogar novamente</button>
+    </div>
   </main>
   
 </body>
