--- a/Stage 04 DOM/Calculadora-IMC/index.html
+++ b/Stage 04 DOM/Calculadora-IMC/index.html
@@ -41,5 +41,17 @@
      </form>
     </main>
   </div>
+
+  <div class="modal-wrapper open">
+    <div class="modal card">
+      
+      <h2>
+        <button class="close">
+          <img src="assets/close.svg" alt="imagem para fechar o popup">
+        </button>
+        Seu IMC é de 26
+      </h2>
+    </div>
+  </div>
 </body>
 </html>
