--- a/Stage 04 DOM/Calculadora-IMC/index.html
+++ b/Stage 04 DOM/Calculadora-IMC/index.html
@@ -12,6 +12,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="alert-error open">
+    Digite somente números
+  </div>
   <div class="container">
     <main class="card">
      <form>
