displaying result in modal

--- a/Stage 04 DOM/Calculadora-IMC/index.html
+++ b/Stage 04 DOM/Calculadora-IMC/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="alert-error open">
+  <div class="alert-error">
     Digite somente números
   </div>
   <div class="container">
@@ -29,7 +29,7 @@
        </div>
 
        <div class="input-wrapper">
-        <label for="height">Altura (m)</label>
+        <label for="height">Altura (cm)</label>
         <input 
           id="height" 
           type="text"
@@ -45,14 +45,14 @@
     </main>
   </div>
 
-  <div class="modal-wrapper open">
+  <div class="modal-wrapper">
     <div class="modal card">
       
       <h2>
         <button class="close">
           <img src="assets/close.svg" alt="imagem para fechar o popup">
         </button>
-        Seu IMC é de 26
+       <span>Seu IMC é de 26</span>
       </h2>
     </div>
   </div>
