--- a/Stage 04 DOM/Calculadora-IMC/index.html
+++ b/Stage 04 DOM/Calculadora-IMC/index.html
@@ -8,7 +8,8 @@
   <title>Calculadora IMC</title>
   
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
+  <script src="script.js" defer type="module"></script>
+
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -37,7 +38,7 @@
         />
        </div>
 
-       <button>
+       <button type="submit">
          Calcular IMC 
          <img src="assets/arrow.svg" alt="seta apontando para direita">
       </button>
