--- a/Stage 04 DOM/Calculadora-IMC/index.html
+++ b/Stage 04 DOM/Calculadora-IMC/index.html
@@ -8,8 +8,6 @@
   <title>Calculadora IMC</title>
   
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer type="module"></script>
-
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -57,5 +55,7 @@
       </h2>
     </div>
   </div>
+
+  <script type="module" src="js/index.js"></script>
 </body>
 </html>
