--- a/Stage 05/Focus Timer/index.html
+++ b/Stage 05/Focus Timer/index.html
@@ -8,9 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Focus Timer</title>
     <link rel="stylesheet" href="style.css" />
-
-    <script src="script.js" defer></script>
-
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
       rel="stylesheet"
@@ -47,5 +44,7 @@
         <img src="assets/sound-off.svg" alt="" />
       </button>
     </footer>
+
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
