--- a/Stage 05/Focus Timer/index.html
+++ b/Stage 05/Focus Timer/index.html
@@ -12,6 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-ico">
   </head>
   <body>
     <main>
