--- a/Desafios/Focus Timer 2.0/index.html
+++ b/Desafios/Focus Timer 2.0/index.html
@@ -20,38 +20,38 @@
     <main>
       <div id="countdown">
         <div id="timer">
-          <span class="minutes">25</span>
+          <span class="minutes">05</span>
           <span>:</span>
           <span class="seconds">00</span>
         </div>
 
         <div class="controls">
-          <button>
+          <button class="play">
             <img src="assets/play.svg" alt="" />
           </button>
-          <button>
+          <button class="stop">
             <img src="assets/stop.svg" alt="" />
           </button>
-          <button>
+          <button class="add">
             <img src="assets/add.svg" alt="" />
           </button>
-          <button>
+          <button class="subtract">
             <img src="assets/remove.svg" alt="" />
           </button>
         </div>
       </div>
 
       <div class="controls-sound">
-        <button class="card-sound">
+        <button class="card-sound day">
           <img src="assets/day.svg" alt="" />
         </button>
-        <button class="card-sound">
+        <button class="card-sound card-blue rain">
           <img src="assets/rain.svg" alt="" />
         </button>
-        <button class="card-sound">
+        <button class="card-sound tavern">
           <img src="assets/tavern.svg" alt="" />
         </button>
-        <button class="card-sound">
+        <button class="card-sound fire">
           <img src="assets/fire.svg" alt="" />
         </button>
       </div>
