adding background music

--- a/Desafios/Focus Timer 2.0/index.html
+++ b/Desafios/Focus Timer 2.0/index.html
@@ -9,7 +9,8 @@
     <title>Focus Timer 2.0</title>
 
     <link rel="stylesheet" href="style.css" />
-    <script src="js/script.js" defer type="module"></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <script src="js/index.js" defer type="module"></script>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
@@ -42,16 +43,16 @@
       </div>
 
       <div class="controls-sound">
-        <button class="card-sound day">
+        <button class="card-sound florest">
           <img src="assets/day.svg" alt="" />
         </button>
         <button class="card-sound card-blue rain">
           <img src="assets/rain.svg" alt="" />
         </button>
-        <button class="card-sound tavern">
+        <button class="card-sound coffeeShop">
           <img src="assets/tavern.svg" alt="" />
         </button>
-        <button class="card-sound fire">
+        <button class="card-sound fireplace">
           <img src="assets/fire.svg" alt="" />
         </button>
       </div>
