--- a/Desafios/Focus Timer 2.0/index.html
+++ b/Desafios/Focus Timer 2.0/index.html
@@ -21,7 +21,7 @@
     <main>
       <div id="countdown">
         <div id="timer">
-          <span class="minutes">05</span>
+          <span class="minutes">02</span>
           <span>:</span>
           <span class="seconds">00</span>
         </div>
@@ -46,7 +46,7 @@
         <button class="card-sound florest">
           <img src="assets/day.svg" alt="" />
         </button>
-        <button class="card-sound card-blue rain">
+        <button class="card-sound rain">
           <img src="assets/rain.svg" alt="" />
         </button>
         <button class="card-sound coffeeShop">
