--- a/Stage 06/Github Favorites/index.html
+++ b/Stage 06/Github Favorites/index.html
@@ -1,75 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Github Favorites</title>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Github Favorites</title>
 
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
 
-  <div id="app">
-    <header>
-      <h1>Github Favorites</h1>
-      <div class="search">
-        <label for="input-search">Usuário do Github</label>
-        <input type="text" id="input-search" placeholder="Usuário do Github">
-        <button>&plus;</button>
-      </div>
-    </header>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="app">
+      <header>
+        <h1>Github Favorites</h1>
+        <div class="search">
+          <label class="sr-only" for="input-search">Usuário do Github</label>
+          <input
+            type="text"
+            id="input-search"
+            placeholder="Usuário do Github"
+          />
+          <button>&plus;</button>
+        </div>
+      </header>
 
-    <table>
-      <thead>
-        <tr>
-          <th>Usuário</th>
-          <th>Repositórios</th>
-          <th>Seguidores</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="user">
-            <img src="https://github.com/marlisonmourao.png" alt="">
-            <a href="https://github.com/marlisonmourao" target="_blank">
-              <p>Marlison Mourão</p>
-              <span>marlisonmourao</span>
-            </a>
-          </td>
-          <td class="repositories">
-            36
-          </td>
-          <td class="followers">
-            547
-          </td>
-          <td>
-            <button>&times</button>
-          </td>
-        </tr>
+      <table>
+        <thead>
+          <tr>
+            <th>Usuário</th>
+            <th>Repositórios</th>
+            <th>followers</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="user">
+              <img src="https://github.com/marlisonmourao.png" alt="" />
+              <a href="https://github.com/marlisonmourao" target="_blank">
+                <p>Marlison Mourão</p>
+                <span>marlisonmourao</span>
+              </a>
+            </td>
+            <td class="repositories">36</td>
+            <td class="followers">547</td>
+            <td>
+              <button class="remove">&times</button>
+            </td>
+          </tr>
 
-             <tr>
-          <td class="user">
-            <img src="https://github.com/maykbrito.png" alt="">
-            <a href="https://github.com/maykbrito" target="_blank">
-              <p>Mayk Brito</p>
-              <span>maykbrito</span>
-            </a>
-          </td>
-          <td class="repositories">
-            25
-          </td>
-          <td class="followers">
-            789
-          </td>
-          <td>
-            <button>&times</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  
-</body>
+          <tr>
+            <td class="user">
+              <img src="https://github.com/maykbrito.png" alt="" />
+              <a href="https://github.com/maykbrito" target="_blank">
+                <p>Mayk Brito</p>
+                <span>maykbrito</span>
+              </a>
+            </td>
+            <td class="repositories">25</td>
+            <td class="followers">789</td>
+            <td>
+              <button class="remove">&times</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
