--- a/Stage 06/Github Favorites/index.html
+++ b/Stage 06/Github Favorites/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="style.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+    <script src="js/index.js" type="module" defer></script>
   </head>
   <body>
     <div id="app">
